Changelog
=========


1.0a8
-----

* Using the same styles on treeitems without a link as with normal treeitems
  [fsprenger]
  
* Styling: Added new active button ("assign")
  [phabegger]


1.0a7
-----

* Margin for navigation items
  [fsprenger]

* Fixed menu position for IE8
  [fsprenger]

* Bigger small font size
  [fsprenger]

* Added iZug logo
  [fsprenger]

* Issue #873 Anzeige Menuebaum eingerueckt angezeigt
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/873
  [fsprenger]

* Fixed searchbox
  [fsprenger]

* Issue #865 Styling-Anpassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/865
  Added styling for selected button ids.
  [fsprenger]


1.0a6
-----

* fixed image url
  [fsprenger]


1.0a5
-----

* several style fixes
  [fsprenger]

* added icons for several workflowstates
  [fsprenger]

* enabled caching for column width scripts when used outside of opengever
  [fsprenger]

* fixed overdue icon
  [fsprenger]

* fix for ie
  [fsprenger]


1.0a4
-----

* Various improvements for styling in IE
  [fsprenger]

* Various CSS improvements
  [fsprenger]


* OpenGever task response listing: make label big enough for the longer
  label texts such as "Responsible client"
  [jbaumann]

* On personal request of Dr. Pascal Habegger and Mr. Olivier Debenath:
  Show the borders always!
  [jbaumann]



1.0a3
-----

* Fixed translations
  [jbaumann]


1.0a2
-----

* Made Tree portlet usable in ie
  [fsprenger]

* Fixed tabbedview
  [fsprenger]

* Fixed debug info viewlet and version in siteactions
  [jbaumann]


1.0a1
-----

* Initial release
